[package]
name = "rustymumbleserver"
version = "0.1.0"
edition = "2021"

[profile.release]
# 1. Enable Link-Time Optimization (LTO) for cross-crate optimization
lto = "fat"
# 2. Set the highest optimization level
codegen-units = 1
# 3. Aggressively strip debug information
strip = true
# 4. Set the highest optimization level
opt-level = 3

[dependencies]
# Use minimal features for performance where possible.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
bytes = "1"
# Non-performance critical dependencies can remain simple
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
rand = "0.8"
futures = { version = "0.3", features = ["std"] }
